<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/loginBG"
    tools:context=".LoginActivity">

    <!-- Login progress -->
    <ImageView
        android:id="@+id/progress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_gravity="center"
        android:layout_margin="8dp"
        android:visibility="gone" />

    <TextView
        android:id="@+id/text_progress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/progress"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center"
        android:layout_margin="8dp"
        android:text="Loading"
        android:textSize="16sp"
        android:visibility="gone" />

    <LinearLayout
        android:id="@+id/login_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView

            android:id="@+id/logo"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_marginTop="16dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="16dp"
            android:layout_weight="3"
            android:paddingTop="16dp"
            app:srcCompat="@drawable/logo_loading_vector_white" />

        <EditText
            android:gravity="center"
            android:layout_width="wrap_content"
            android:id="@+id/email"
            android:ems="13"
            android:padding="8dp"
            android:background="@drawable/login_button_bg"
            android:hint="@string/prompt_email"
            android:inputType="textPersonName"
            android:maxLines="1"
            android:singleLine="true"
            android:textColor="@android:color/white"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_margin="16dp"/>

        <EditText
            android:id="@+id/password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:ems="13"
            android:gravity="center"
            android:padding="8dp"
            android:background="@drawable/login_button_bg"
            android:hint="@string/prompt_password"
            android:imeActionId="6"
            android:imeActionLabel="@string/action_sign_in_short"
            android:imeOptions="actionUnspecified"
            android:inputType="textPassword"

            android:maxLines="1"
            android:singleLine="true"
            android:textColor="@android:color/white"
            />


        <TextView
            android:id="@+id/remarks"
            android:layout_width="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:ems="13"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:textColor="@android:color/holo_red_dark" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/email_sign_up_btn"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/loginButtonMargin"
                android:layout_marginStart="@dimen/loginButtonMargin"
                android:layout_weight="1"
                android:background="@drawable/reg_form_btn_bg"
                android:text="@string/prompt_sign_up"
                android:textColor="@android:color/white" />

            <Button
                android:id="@+id/email_sign_in_btn"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/loginButtonMargin"
                android:layout_marginStart="@dimen/loginButtonMargin"
                android:layout_weight="1"
                android:background="@drawable/reg_form_btn_bg"
                android:text="@string/action_sign_in_short"
                android:textColor="@android:color/white" />

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"/>

    </LinearLayout>


</RelativeLayout>